--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1 class="header">My Beautiful Webpage</h1>
+    <h1 class="header">Shivams webpage</h1>
     <p class="content">Welcome to my beautiful webpage created with CSS.</p>
     <img class="image" src="image.jpg" alt="My Image">
   </body>
